--- a/projeto_modulo1.ipynb
+++ b/projeto_modulo1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPvcJLRrxSrotSmy+t1Nf5n",
+      "authorship_tag": "ABX9TyP8QmiGcWxB0S4QOazBp+7d",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -27,18 +27,13 @@
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "SYXLk7DLo5dH"
-      },
-      "outputs": [],
+      "cell_type": "markdown",
       "source": [
         "## Síndrome da Fadiga Crônica (EM/SFC) e Depressão\n",
         "\n",
         "### Fonte de Dados:\n",
         "\n",
-        "O conjunto de dados utilizado é sintetíco, desenvolvimendo para tarefas de classificação entre Encefalomielite Miálgica/Síndrome da Fadiga Crônica (EM/SFC) e Depressão.\n",
+        "O conjjunto de dados utilizado é sintetíco, desenvolvimendo para tarefas de classificação entre Encefalomielite Miálgica/Síndrome da Fadiga Crônica (EM/SFC) e Depressão.\n",
         "\n",
         "Este é o primeiro conjunto de dados desse tipo criado especificamente para ajudar iniciantes e pesquisadores a explorar casos complexos de diagnóstico diferencial em condições de saúde mental e crônica.\n",
         "\n",
@@ -62,7 +57,42 @@
         "* **meditation_or_mindfulness** - O paciente pratica mindfulness ou meditação? Sim / NãoDoes the patient practice mindfulness or meditation? Yes/No\n",
         "* **hours_of_sleep_per_night** - Duração média do sono por noite\n",
         "* **diagnosis** - Diagnóstico (qual doença o paciente tem, ou possui ambas): ME/CFS, Depressão, Ambos (Variável Target)"
-      ]
+      ],
+      "metadata": {
+        "id": "nkABRTYXsF1a"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import pandas as pd # Para trabalhar com dados tabulares\n",
+        "# from sklearn.model_selection import train_test_split #separação dos dados\n",
+        "# from sklearn.neighbors import KNeighborsClassifier #modelo de machine learning classificação\n",
+        "# from sklearn.metrics import accuracy_score #avaliação do modelo\n",
+        "# from sklearn.metrics import confusion_matrix, ConfusionMatrixDisplay\n",
+        "# from sklearn.metrics import accuracy_score #métrica de avaliação\n",
+        "# from sklearn.preprocessing import StandardScaler, MinMaxScaler #Feature Engineer\n",
+        "# import matplotlib.pyplot as plt #gráficos\n",
+        "# import seaborn as sns #gráficos\n",
+        "# import numpy as np #transformação dos dados\n",
+        "# import warnings #remoção de avisos"
+      ],
+      "metadata": {
+        "id": "elafn7iqrkCw"
+      },
+      "execution_count": 1,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "dados = pd.read_csv('me_depression_data.csv', sep=',')"
+      ],
+      "metadata": {
+        "id": "mkohJpecrlF2"
+      },
+      "execution_count": 3,
+      "outputs": []
     }
   ]
 }
