--- a/projeto_modulo1.ipynb
+++ b/projeto_modulo1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPt174nWsBYBEqBA5DanFTo",
+      "authorship_tag": "ABX9TyMusPp2szrywujqzcn6R8/K",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -31,7 +31,7 @@
       "source": [
         "## Síndrome da Fadiga Crônica (EM/SFC) e Depressão\n",
         "\n",
-        "A síndrome de fadiga crônica é caracterizada por deixar o portador com uma sensação de estar extremamente cansado o tempo todo, mesmo após uma boa noite de sono. Esta condição pode piorar após qualquer tipo de atividade, exercício físico ou mental. A pessoa fica exausta para fazer quase todas as suas atividades diárias, como: tomar banho, ir ao trabalho, fazer serviços domésticos e demais atividades que necessitem siar de casa.\n",
+        "A síndrome de fadiga crônica, também conhecida como  Encefalomielite Miálgica, é caracterizada por deixar o portador com uma sensação de estar extremamente cansado o tempo todo, mesmo após uma boa noite de sono. Esta condição pode piorar após qualquer tipo de atividade, exercício físico ou mental. A pessoa fica exausta para fazer quase todas as suas atividades diárias, como: tomar banho, ir ao trabalho, fazer serviços domésticos e demais atividades que necessitem siar de casa.\n",
         "\n",
         "Além da fadiga, a doença pode gerar sintomas como: dificuldade para dormir ou acordar, tontura, fraqueza muscular, dor de garganta, problemas digestivos, calafrios, suores noturnos, alergias ou reações alimentares, sensibilidade à luz ou a ruídos, batimentos cardíacos irregulares e falta de ar.\n",
         "\n",
@@ -54,8 +54,8 @@
         "\n",
         "* **age** -\tIdade do paciente\n",
         "* **gender** -\tGenêro (Feminino / Masculino)\n",
-        "* **fatigue_severity_scale_score** -\tEscala de Gravidade da Fadiga (Fatigue Severity Scale - FSS), 0–10\n",
-        "* **depression_phq9_score** -\tPHQ-9 Índice de depressão (questionário que avalia o nível de depressão do paciente) 0–27\n",
+        "* **fatigue_severity_scale_score** -\tEscala de Gravidade da Fadiga (escala de 1 à 10)\n",
+        "* **depression_phq9_score** -\tPHQ-9 Índice de depressão (questionário que avalia o nível de depressão do paciente) (escala de 1 à 27)\n",
         "  Gravidade da depressão segundo o questionário PHQ-9:\n",
         "    1-4 - Depressão mínima\n",
         "    5-9 - Depressão Leve\n",
@@ -65,15 +65,15 @@
         "* **pem_present\tWhether** - Mal-estar pós-esforço está presente (Sim / Não)\n",
         "* **pem_duration_hours** -\tDuração do mal-estar pós-esforço (PEM) em horas\n",
         "* **sleep_quality_index** -\tQualidade do sono (escala de 1 à 10)\n",
-        "* **brain_fog_level** -\tConfusão mental / Dificuldade de concentração (1–10)\n",
-        "* **physical_pain_score** -\tIntesidade da dor física (1–10)\n",
-        "* **stress_level** - Nível de estresse (1–10)\n",
+        "* **brain_fog_level** -\tConfusão mental / Dificuldade de concentração (escala de 1 à 10)\n",
+        "* **physical_pain_score** -\tIntesidade da dor física (escala de 1 à 10)\n",
+        "* **stress_level** - Nível de estresse (escala de 1 à 10)\n",
         "* **work_status** -\tStatus de trabalho (Trabalhando / Trabalho parcial / Sem trabalho)\n",
         "* **social_activity_level** - Nível de atividade social (Muito alto, Alto, Médio, Baixo, Muito baixo;\n",
         "* **exercise_frequency** - Frequência de atividade física (Diariamente,Frequentemente, Às vezes, Raramente, Nunca)\n",
         "* **meditation_or_mindfulness** - O paciente pratica mindfulness ou meditação? (Sim / Não)\n",
         "* **hours_of_sleep_per_night** - Duração média do sono por noite\n",
-        "* **diagnosis** - Diagnóstico (qual(is) doença(s) o paciente tem): ME/CFS, Depressão, Ambas **(Variável Target)**\n",
+        "* **diagnosis** - Diagnóstico (qual(is) doença(s) o paciente tem)? (ME/CFS, Depressão, Ambas) **(Variável Target)**\n",
         "\n",
         "A base de dados pode ser acessada no seguinte link: [Dados do projeto](https://www.kaggle.com/datasets/storytellerman/mecfs-vs-depression-classification-dataset)"
       ],
