--- a/projeto_modulo1.ipynb
+++ b/projeto_modulo1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMusPp2szrywujqzcn6R8/K",
+      "authorship_tag": "ABX9TyNujGwcrwp2IsPSajlsIsjB",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -69,8 +69,18 @@
         "* **physical_pain_score** -\tIntesidade da dor física (escala de 1 à 10)\n",
         "* **stress_level** - Nível de estresse (escala de 1 à 10)\n",
         "* **work_status** -\tStatus de trabalho (Trabalhando / Trabalho parcial / Sem trabalho)\n",
-        "* **social_activity_level** - Nível de atividade social (Muito alto, Alto, Médio, Baixo, Muito baixo;\n",
-        "* **exercise_frequency** - Frequência de atividade física (Diariamente,Frequentemente, Às vezes, Raramente, Nunca)\n",
+        "* **social_activity_level** - Nível de atividade social:\n",
+        "    Muito alto,\n",
+        "    Alto,\n",
+        "    Médio,\n",
+        "    Baixo,\n",
+        "    Muito baixo.\n",
+        "* **exercise_frequency** - Frequência de atividade física:\n",
+        "    Diariamente,\n",
+        "    Frequentemente,\n",
+        "    Às vezes,\n",
+        "    Raramente,\n",
+        "    Nunca;\n",
         "* **meditation_or_mindfulness** - O paciente pratica mindfulness ou meditação? (Sim / Não)\n",
         "* **hours_of_sleep_per_night** - Duração média do sono por noite\n",
         "* **diagnosis** - Diagnóstico (qual(is) doença(s) o paciente tem)? (ME/CFS, Depressão, Ambas) **(Variável Target)**\n",
