--- a/projeto_modulo1.ipynb
+++ b/projeto_modulo1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyM7B16znOfu+quH0WnWOsBK",
+      "authorship_tag": "ABX9TyOVJTuFGV3RBEn7JL0SPJZT",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -173,7 +173,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "A base de dados utilizada possui umas dimensão de 16 colunas e 1000 linhas de informação. Com dados numéricos e categóricos."
+        "A base de dados utilizada possui uma dimensão de 16 colunas e 1000 linhas de dados. Com dados numéricos e categóricos."
       ],
       "metadata": {
         "id": "G7YGRg4xW0O2"
@@ -1086,7 +1086,16 @@
     {
       "cell_type": "markdown",
       "source": [
-        "As variáveis: \"gender\", \"work_status\", \"social_activity_level\", exercise_frequency\", \"meditation_e_mindfulness\", \"diagnosis\", são variáveis do tipo texto. Analisando estas variáveis uma de cada vez:"
+        "# Analisando as variáveis categóricas"
+      ],
+      "metadata": {
+        "id": "CbYXlMaL546s"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "As variáveis: \"gender\", \"work_status\", \"social_activity_level\", \"exercise_frequency\", \"meditation_e_mindfulness\", \"diagnosis\", são variáveis do tipo texto que serão analisadas a seguir:"
       ],
       "metadata": {
         "id": "fzo5CU1xyD6w"
@@ -1095,7 +1104,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "*  Variável: Gênero (**gender**) possui dois valores, feminino (Female) e masculino (Male), sem nenhum valor NaN (Not a number). Com uma maior quantidade de pacientes do gênero feminino.\n"
+        "*  Variável: Gênero (**gender**) possui dois valores, feminino (Female) e masculino (Male), sem nenhum valor NaN (Not a number). Com uma maior quantidade de pacientes do gênero feminino (4,8% maior).\n"
       ],
       "metadata": {
         "id": "vyC0P7Q1ytLV"
@@ -1199,7 +1208,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "*   Variável: Status de trabalho (**work_status**), possui três valores, Trabalhando (Working), Trabalho parcial (Partiallly working) e Sem trabalho (Not working) com uma distribuição de valores muito próxima entre o status de trabalho dos pacientes. E contabilizando 47 valores NaN ao todo."
+        "*   Variável: Status de trabalho (**work_status**), possui três valores, Trabalhando (Working), Trabalho parcial (Partiallly working) e Sem trabalho (Not working) com uma distribuição de relativamente próxima, com maior devio da média de 18,61 (desvio padrão). E contabilizando 47 valores NaN ao todo."
       ],
       "metadata": {
         "id": "SC5QKMGUzdk5"
@@ -1308,6 +1317,40 @@
     {
       "cell_type": "code",
       "source": [
+        "work_count = data[\"work_status\"].value_counts().values\n",
+        "std_work = np.std(work_count, ddof=1)\n",
+        "print(f\"Desvio padrão: {std_work:.2f}\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "q6zlcIzP384n",
+        "outputId": "851b4005-e841-48bf-9db5-8a5a977af943"
+      },
+      "execution_count": 96,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Desvio padrão: 18.61\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Calculando a quantidade de valores \"NaN\" na variável:"
+      ],
+      "metadata": {
+        "id": "suNCBv5Ztv26"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "data[\"work_status\"].isna().sum()"
       ],
       "metadata": {
@@ -1332,34 +1375,9 @@
       ]
     },
     {
-      "cell_type": "code",
-      "source": [
-        "work_count = data[\"work_status\"].value_counts().values\n",
-        "std_work = np.std(work_count, ddof=1)\n",
-        "print(f\"Desvio padrão: {std_work:.2f}\")"
-      ],
-      "metadata": {
-        "id": "q6zlcIzP384n",
-        "outputId": "851b4005-e841-48bf-9db5-8a5a977af943",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "execution_count": 96,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Desvio padrão: 18.61\n"
-          ]
-        }
-      ]
-    },
-    {
       "cell_type": "markdown",
       "source": [
-        "*  Variável: Nível de Atividade Social (**social_activity_level**), com cinco valores, Muito alto (Very high), Alto (Hight), Médio (Medium), Baixo (Low) e Muito baixo (Very low). Sendo os valores distribuidos de forma muito próxima e contabililzando 40 valores NaN ao todo."
+        "*  Variável: Nível de Atividade Social (**social_activity_level**), com cinco valores, Muito alto (Very high), Alto (Hight), Médio (Medium), Baixo (Low) e Muito baixo (Very low). Sendo os valores distribuidos de forma muito próxima (desvio padrão de 9,30) e contabililzando 40 valores NaN ao todo."
       ],
       "metadata": {
         "id": "ANBvxyrdzg_L"
@@ -1476,13 +1494,6 @@
       ]
     },
     {
-      "cell_type": "markdown",
-      "source": [],
-      "metadata": {
-        "id": "wiqQq7w9oVkY"
-      }
-    },
-    {
       "cell_type": "code",
       "source": [
         "activity_count = data[\"social_activity_level\"].value_counts().values\n",
@@ -1490,11 +1501,11 @@
         "print(std_activity)"
       ],
       "metadata": {
-        "id": "n-2YjbNIm-8h",
-        "outputId": "dd1ae02c-9aab-4aa7-97db-61725d12dab9",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "n-2YjbNIm-8h",
+        "outputId": "dd1ae02c-9aab-4aa7-97db-61725d12dab9"
       },
       "execution_count": 62,
       "outputs": [
@@ -1510,10 +1521,10 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Analisando a quantidade de valores \"NaN\" na variável:"
+        "Calculando a quantidade de valores \"NaN\" na variável:"
       ],
       "metadata": {
-        "id": "suNCBv5Ztv26"
+        "id": "e74kklV77LPk"
       }
     },
     {
@@ -1669,11 +1680,11 @@
         "print(f\"Desvio padrão: {std_activity:.2f}\")"
       ],
       "metadata": {
-        "id": "NKH9l88MjcAy",
-        "outputId": "8ca41c8a-05f7-45f5-8e40-d54ec2a4c59b",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "NKH9l88MjcAy",
+        "outputId": "8ca41c8a-05f7-45f5-8e40-d54ec2a4c59b"
       },
       "execution_count": 66,
       "outputs": [
@@ -1685,6 +1696,15 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Calculando a quantidade de valores \"NaN\" na variável:"
+      ],
+      "metadata": {
+        "id": "_toKRPAJ7q5m"
+      }
     },
     {
       "cell_type": "code",
@@ -1715,7 +1735,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Variável: \"**meditation_or_mindfulness**\""
+        "Variável: Meditação ou mindfulness (**meditation_or_mindfulness**), possui dois valores sim e não, constatando se o paciente em questão realiza ou não uma das atividades em seu dia a dia. Possui 11 valores do tipo NaN."
       ],
       "metadata": {
         "id": "7xlEG2F40AOW"
@@ -1845,7 +1865,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Variável: \"**diagnosis**\""
+        "Variável: Diagnóstico (**diagnosis**), a variável target da base de dados, possuindo três valores, Depressão (Depression), ME/CFS e Ambos (Both). Os valores dizem respeito a se o paciente possui uma das doenças ou ambas. A distribuição dos valores é mais heterogênea para o diagnóstico de pacientes que possuem ambas as doenças (Desvio padrão 113,76)."
       ],
       "metadata": {
         "id": "oFXZl1n70FkG"
@@ -1959,11 +1979,11 @@
         "print(f\"Desvio padrão: {std_diagnosis:.2f}\")"
       ],
       "metadata": {
-        "id": "ftoKXUyO4lOb",
-        "outputId": "30758cbb-8d6c-47ad-f59e-3622bb6534db",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "ftoKXUyO4lOb",
+        "outputId": "30758cbb-8d6c-47ad-f59e-3622bb6534db"
       },
       "execution_count": 99,
       "outputs": [
@@ -1979,7 +1999,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Analisando as variáveis do **tipo numerico**: VERIFICAR SE É PRECISO ESTA ETAPA, AS VEZES PODE COLOCAR QUE AS VARIÁVEIS CATEGORICAS FORAM ANALISADAS UMA A UMA PARA MOSTRAR O QUE HAVIA DENTRO DE CADA UMA"
+        "# Analisando as variáveis numéricas"
       ],
       "metadata": {
         "id": "-wANabj8cMa7"
