--- a/projeto_modulo1.ipynb
+++ b/projeto_modulo1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPQZ/scyA585UbrEQX6+5Iw",
+      "authorship_tag": "ABX9TyOtGpp1J0K/MPNLsjtP74iJ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2203,6 +2203,26 @@
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Observando os dados, podemos nos questionar sobre como os valores das variáveis podem influênciar no diagnóstico de cada paciente. Podemos nos perguntar sobre qual genêro é mais afetado pelas doenças, qual a realação entre estar trabalhando ou não, a idade dos pacientes e como a doença se manifesta na disposição do paciente após esforços físicos."
+      ],
+      "metadata": {
+        "id": "ST4XLsFyd8BM"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Diagnóstico por gênero\n",
+        "\n",
+        "No gráfico, podemos observar que para o diagnóstico que o paciente possui as duas doenças, não diferença entre a quantidade de afetados em relação ao genêro. Para os demais diagnósticos, é possível ver que o gênero masculino é mais afetado."
+      ],
+      "metadata": {
+        "id": "mMY6ZC_lh6Dc"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "grouped = data.groupby([\"diagnosis\", \"gender\"]).size().unstack(fill_value=0)\n",
@@ -2238,6 +2258,27 @@
           "metadata": {}
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "3BBWiLdpi94s"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Relação entre trabalho e dianóstico\n",
+        "\n",
+        "Observando o gráfico e a soma das quantidades ao lado, podemos ver que há mais pacientes trabalhando de forma integral ou parcial do que desempregados. Isto significa que, para este grupo de pessoas estudadas, a depressão e/ou fadiga crônica, não se tornou um empecilho para as atividades diárias do indivíduo.\n",
+        "Na análise destes casos, podemos verificar o valor do índice PHQ-9 para a depressão e a escala de gravidade da fadiga, para analisarmos de forma melhor o quanto essas doenças estão com seus índices mais altos (índices graves, qua podem ser incapacitantes para a pessoa).."
+      ],
+      "metadata": {
+        "id": "ZOM4qsXSi9B3"
+      }
     },
     {
       "cell_type": "code",
@@ -2346,12 +2387,12 @@
         "plt.show()\n"
       ],
       "metadata": {
-        "id": "lhPU1S8DeqA-",
-        "outputId": "79f036d3-d8c5-4519-c805-89adb75d3934",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 607
-        }
+        },
+        "id": "lhPU1S8DeqA-",
+        "outputId": "79f036d3-d8c5-4519-c805-89adb75d3934"
       },
       "execution_count": 62,
       "outputs": [
