--- a/projeto_modulo1.ipynb
+++ b/projeto_modulo1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOXFTXco7R20SYpvwFMCpZ0",
+      "authorship_tag": "ABX9TyPWQdzu7em6ee2fcOCCuKtQ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1220,11 +1220,11 @@
         "data[\"gender\"].isna().sum()"
       ],
       "metadata": {
-        "id": "iZWECc6Qk02Z",
-        "outputId": "5350d384-1dbe-4d5a-d231-384b2970f990",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "iZWECc6Qk02Z",
+        "outputId": "5350d384-1dbe-4d5a-d231-384b2970f990"
       },
       "execution_count": 10,
       "outputs": [
@@ -1877,11 +1877,11 @@
         "data[\"meditation_or_mindfulness\"].isna().sum()"
       ],
       "metadata": {
-        "id": "nfzR5Jq6laOa",
-        "outputId": "85cfd2db-60f8-4ada-cf4b-45624b78a558",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "nfzR5Jq6laOa",
+        "outputId": "85cfd2db-60f8-4ada-cf4b-45624b78a558"
       },
       "execution_count": 53,
       "outputs": [
@@ -2037,11 +2037,11 @@
         "data[\"diagnosis\"].isna().sum()"
       ],
       "metadata": {
-        "id": "_FJfHKQXlqWQ",
-        "outputId": "f30a86ba-86c1-4b6e-c969-a1afc6129110",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "_FJfHKQXlqWQ",
+        "outputId": "f30a86ba-86c1-4b6e-c969-a1afc6129110"
       },
       "execution_count": 54,
       "outputs": [
@@ -2236,7 +2236,7 @@
         "id": "yELhqTdBmSl_",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 126
+          "height": 427
         },
         "outputId": "a8ed173a-bec9-4deb-a1da-b487073991e9"
       },
@@ -2857,7 +2857,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Agora, para que os dados categóricos possam fazer da predição dos dados, temos que transoformá-los para dados que possam ser lidos por algoritmo, como os dados númericos. Assim, utilizamos a seguir a técnica de Label Enconding sem definir a ordem dos valores para cada variável:"
+        "Agora, para que os dados categóricos possam fazer da predição dos dados, temos que transoformá-los para dados que possam ser lidos por algoritmo, como os dados númericos. Assim, utilizamos a seguir a técnica de Label Enconding. A utilização do Label Enconding neste processo será melhor utilizada, já que não aumenta a dimensionalidade dos dados, como técnicas como o Hot Enconding."
       ],
       "metadata": {
         "id": "oVZtzB0GUSzo"
@@ -3928,32 +3928,26 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Apenas para deixarmos registrado, um ponto importante também a ser analisado nos dados numéricos é a presença de Outliers e isto foi realizado no início na parte de análise numérica e os dados considerados como Outliers foram explanados."
+        "Apenas para deixarmos registrado, um ponto importante também a ser analisado nos dados numéricos é a presença de Outliers e isto foi realizado no início, na parte de análise numérica e os dados considerados como Outliers foram explanados."
       ],
       "metadata": {
         "id": "MwdWuHQHh3fP"
       }
     },
     {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "5g1Tvmj2U7_3"
-      },
-      "execution_count": 45,
-      "outputs": []
-    },
-    {
       "cell_type": "markdown",
-      "source": [],
+      "source": [
+        "## **Matriz de correlação, com dados numéricos e categóricos**\n",
+        "\n",
+        "Analisando a matriz de correlação a seguir, podemos perceber que a variável target (diagnóstico), tem maior correlção com as variáveis do índice de depressão PHQ-9, da presença de mal-estar após esforço e a escala de gravidade da fadiga."
+      ],
       "metadata": {
-        "id": "9LtGpWJCU1Yp"
+        "id": "92_3xG7G99Bz"
       }
     },
     {
       "cell_type": "code",
       "source": [
-        "#NÃO SEI SE FAZ SENTIDO PARA EM CASOS DE CLASSIFICAÇÃO E NÃO REGRESSÃO\n",
         "correlation_matrix = treated_data.corr().round(2)\n",
         "\n",
         "fig, ax = plt.subplots(figsize=(16,16))\n",
@@ -4040,7 +4034,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**Separação da base de treino e de teste**"
+        "## **Separação da base de treino e de teste**"
       ],
       "metadata": {
         "id": "US7lDFvxt0RD"
