--- a/projeto_modulo1.ipynb
+++ b/projeto_modulo1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMW/I44bhojzXqXE4n99ro7",
+      "authorship_tag": "ABX9TyOZesw2gLWjgMOAxI4pC6BR",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2141,7 +2141,7 @@
         "id": "-PazNYLKvVUz",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 943
+          "height": 1000
         },
         "outputId": "f38b53bb-3dab-459d-baf6-737695b36bac"
       },
@@ -2255,7 +2255,7 @@
         "id": "yELhqTdBmSl_",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 126
+          "height": 155
         },
         "outputId": "1a15b9e7-e45f-457f-a37e-4ec3eda2e509"
       },
@@ -4196,7 +4196,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Analisando a matriz de confusão, podemos perceber que há 27 (ambas), 82 (depressão) e 78 (fadiga) acertos. Na matriz é possível ver também, que 2 casos foram diagnosticados como ambas as doenças e 1 como depressão, quando na realidade, eram diagnósticos de fadiga."
+        "Analisando a matriz de confusão, podemos perceber que há 27 (ambas), 82 (depressão) e 78 (fadiga) acertos. Na matriz é possível ver também, que 13 casos foram diagnosticados erroneamente como fadiga, mas na realidade 12 eram ambas as doenças e 1, depressão."
       ],
       "metadata": {
         "id": "1NJYTSiQEmXl"
@@ -4234,9 +4234,6 @@
     {
       "cell_type": "code",
       "source": [
-        "import seaborn as sns\n",
-        "import matplotlib.pyplot as plt\n",
-        "\n",
         "sns.heatmap(cm, annot=True, fmt=\"d\", cmap=\"Blues\")\n",
         "plt.xlabel(\"Predito\")\n",
         "plt.ylabel(\"Real\")\n",
@@ -4249,9 +4246,9 @@
           "base_uri": "https://localhost:8080/",
           "height": 472
         },
-        "outputId": "59843f72-ed81-4bff-a8a2-9c14c7be9a41"
+        "outputId": "6d90601e-fae9-424e-dc19-7aa3cd9225cc"
       },
-      "execution_count": 90,
+      "execution_count": 120,
       "outputs": [
         {
           "output_type": "display_data",
@@ -4345,21 +4342,21 @@
         "\n",
         "Neste estudo, buscamos desenvolver um modelo de inteligência artificial capaz de prever o diagnóstico clínico de pacientes entre três condições: depressão, fadiga (EM/SFC) ou ambas as doenças. Utilizamos uma base de dados com 1000 pacientes e 16 dimensões, aplicando diferentes algoritmos de classificação e avaliando seu desempenho com métricas padrão da literatura.\n",
         "\n",
-        "Os resultados mostraram que os modelos apresentaram bom desempenho global, com acurácia elevada e métricas de precisão e recall satisfatórias. No entanto, observou-se que algumas classes — em especial a classe X (a que apresentou menor recall) — foram mais difíceis de serem corretamente identificadas. Esse comportamento pode estar associado ao desbalanceamento dos dados, ou seja, um número desigual de pacientes entre os diferentes diagnósticos.\n",
+        "Os resultados mostraram que a maioria dos modelos apresentaram uma acurácia elevada, o que pode ser prejudicial para o a predição, pois, estes podem não conseguir serem utilizados em casos mais generalizados com grande exito.\n",
         "\n",
-        "Como próximos passos, sugerimos os seguintes aprimoramentos:\n",
+        "O modelo com melhor predição foi o Modelo de Regressão Logistica, que apesar de não ter a acuracia mais alta, pode apresentar maior previsibiidadede, como apresentado na Matriz de Confusão. Nesta, foi possível observar que a classe 0, fadiga, foi mais difícil de ser corretamente identificada, o que foi representado anteriormente pelo seu recall (0,69) mais baixo que as demais classes.\n",
         "\n",
-        "Exploração de dados (EDA) mais detalhada, incluindo correlações entre variáveis, análise de outliers e caracterização da distribuição dos diagnósticos.\n",
+        "A análise realizada foi uma boa prévia para investigação das doenças retratadas. Mas, ainda mais por ser análises de saúde, onde o paciente pode ser diagnósticado erroneamente, este estudo deve ser mais aprofundado para ter uma confiança mais razoável para ser utilizado de fato.\n",
         "\n",
-        "Tratamento do desbalanceamento das classes, seja por técnicas de oversampling (SMOTE) ou pelo uso de pesos balanceados nos modelos.\n",
+        "Como próximos passos, sugiro:\n",
         "\n",
-        "Avaliação mais robusta dos modelos, utilizando validação cruzada em vez de apenas um único corte treino/teste, além da inclusão de matrizes de confusão e curvas ROC/AUC.\n",
+        "Uma análise dos dados mais amplas e investigação sobre a influência de cada uma das variáveis na real predição;\n",
         "\n",
-        "Análise de importância das variáveis, para identificar quais das 16 dimensões mais contribuem para a predição do diagnóstico.\n",
+        "Melhor tratamento do desbalanceamento das classes, o que pode ter causado o baixo recall da classe 0;\n",
         "\n",
-        "Métodos de interpretabilidade (como SHAP ou LIME), essenciais em aplicações em saúde para explicar as decisões do modelo de forma transparente.\n",
+        "Avaliação mais robusta dos modelos, utilizando validação cruzada em vez de apenas um único corte treino/teste, além da inclusão de matrizes de confusão para a maior partes dos modelos e curvas ROC/AUC;\n",
         "\n",
-        "Em síntese, os experimentos realizados indicam que os modelos de classificação aplicados possuem potencial relevante para apoiar o diagnóstico dessas condições. Entretanto, é fundamental aprimorar a exploração dos dados e a interpretação dos modelos, garantindo maior robustez, transparência e confiabilidade para uma futura aplicação prática em ambientes clínicos."
+        "Em síntese, o modelo sintético produzido indica que os modelos de classificação aplicados possuem potencial relevante para apoiar o diagnóstico dessas condições. Entretanto, é fundamental aprimorar a exploração dos dados e a interpretação dos modelos, garantindo maior robustez, transparência e confiabilidade para uma futura aplicação prática em ambientes clínicos."
       ],
       "metadata": {
         "id": "NNf4SbPJ76w5"
