--- a/projeto_modulo1.ipynb
+++ b/projeto_modulo1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOZesw2gLWjgMOAxI4pC6BR",
+      "authorship_tag": "ABX9TyN5XubRPHmxrc/8Uoss7AuH",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -102,7 +102,10 @@
         "    * Depressão,\n",
         "    * Ambas.\n",
         "\n",
-        "A base de dados pode ser acessada no seguinte link: [Dados do projeto](https://www.kaggle.com/datasets/storytellerman/mecfs-vs-depression-classification-dataset)"
+        "A base de dados pode ser acessada no seguinte link: [Dados do projeto](https://www.kaggle.com/datasets/storytellerman/mecfs-vs-depression-classification-dataset)\n",
+        "\n",
+        "__________________________________________________________________________\n",
+        "[**Link para acesso ao projeto no GitHub**](https://github.com/jessikamorais/FIAP/blob/main/projeto_modulo1.ipynb)"
       ],
       "metadata": {
         "id": "nkABRTYXsF1a"
